# bazel_test_tool

./: .gitignore  README.md
backend/: Gemfile  Rakefile  app.rb
backend/app/controllers/: runs_controller.rb  tests_controller.rb
backend/app/models/: link.rb  run.rb  test.rb
backend/app/services/: run_service.rb
backend/config/: database.rb
backend/db/: development.sqlite3  development.sqlite3-shm  development.sqlite3-wal
backend/db/migrate/: 2025081213260000_create_runs.rb  2025081213260001_create_tests.rb  2025081213260002_create_links.rb
backend/routes/: runs.rb  tests.rb
backend/spec/services/: run_service_spec.rb
frontend/: package-lock.json
frontend/public/: index.html  manifest.json
frontend/src/: Dashboard.tsx
frontend/src/api/: api.ts
frontend/src/components/: Dashboard.tsx  Run.tsx  TestBox.tsx
frontend/src/types/: Run.ts  Test.ts  TestRun.ts  index.ts
project/: BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-project  bazel-testlogs  go.mod
project/main/: BUILD.bazel  main.go
project/questions/: BUILD.bazel  questions.go  questions_test.go
project/quiz/: BUILD.bazel  quiz.go  quiz_test.go
