load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "quiz",
    srcs = ["quiz.go"],
    importpath = "quiz/quiz",  # matches module + folder
    deps = ["//questions:questions"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "quiz_test",
    srcs = ["quiz_test.go"],
    embed = [":quiz"],
    size = "small",
)
